# ai_chat

./: .gitignore  README.md
apps/: pyproject.toml
ui/: package-lock.json  package.json
ui/src/components/: HelloWorld.vue
