# backend/pyproject.toml
[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = "Django backend with Poetry"
[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
# 其他依赖...
[tool.poetry.group.dev.dependencies]  # 开发依赖
black = "^23.3"
django-debug-toolbar = "^4.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"